--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ouro-room/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <meta http-equiv="refresh" content="0; url=/ouro-room/" />
     <title>Ouro Room</title>
     <link
   href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap"
